# cpp-template-project

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  arabic.cpp  arabic.h  exceptions.h  shared.h
test/: arabic_test.cpp
